Istio Sidecar/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: canary
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-gateway
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: homelab
    hosts:
    - nginx.aaronwasson.net
