Istio Sidecar/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: canary-destinationrule
    namespace: canary
spec:
    host: canary
    trafficPolicy:
        loadBalancer:
            simple: ROUND_ROBIN
    subsets:
    - name: stable
      labels:
        version: v1
    - name: canary
      labels:
        version: v2
