Istio Sidecar/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary
  namespace: canary
spec: 
  hosts:
  - nginx.aaronwasson.net
  gateways:
  - istio-ingress/canary
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: canary
        subset: stable
      weight: 80
    - destination:
        port:
          number: 80
        host: canary
        subset: canary
      weight: 20
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,reset,connect-failure
